# cmakeTemple

./: README.md
cmake_basic/: CMakeLists.txt
cmake_basic/doc/: hello.txt
cmake_lib/: CMakeLists.txt
cmake_lib/lib/: CMakeLists.txt  hello.cpp  hello.hpp
cmake_link_lib/: CMakeLists.txt  cmake.md
cmake_link_lib/src/: CMakeLists.txt  main.cpp
cmake_module/: CMakeLists.txt
cmake_module/cmake/: FindHELLO.cmake
cmake_module/src/: CMakeLists.txt
